--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
     <nav class="sticky w-full z-20 top-0 left-0">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
             <a href="/" class="flex items-center">
-               <img src="Untitled image.png" draggable="false" class="h-7 mr-3" alt="IMG"> 
-                <span class="regularTextBold text-white self-center whitespace-nowrap">FunBot</span>
+               <img src="assets/img/FunFavicon.png" draggable="false" class="h-7 mr-3" alt="IMG"> 
+                <span class="regularTextBold text-white self-center whitespace-nowrap">FunDevs</span>
             </a>
             <div class="flex md:order-2">
-                <a href="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847" target="_blank"><button type="button"
+                <a href="LİNKBURAYAGELCEK??!!" target="_blank"><button type="button"
                         class="normalTextBold text-black gradientBg rounded-full px-6 py-3 text-center mr-3 md:mr-0"><i class="fa-brands fa-discord mr-2"></i> Sunucuna Ekle</button></a>
                 <button data-collapse-toggle="navbar-sticky" type="button"
                     class="inline-flex items-center p-2 text-white rounded-xl md:hidden coloredBg aria-controls="
@@ -64,10 +64,6 @@
                     <li>
                         <a href="#top"
                             class="normalText text-white whiteUnderline block py-2 pl-3 pr-6 rounded md:hover:bg-transparent md:p-0"><i class="fa-regular fa-house-blank"></i></a>
-                    </li>
-                    <li>
-                        <a href="#özellikler"
-                            class="normalText text-white whiteUnderline block py-2 pl-3 pr-6 rounded md:hover:bg-transparent md:p-0">Özellikler</a>
                     </li>
                     <li>
                         <a href="#yorumlar"
@@ -113,9 +109,8 @@
             <hr class="customHr">
             <br>
             <p class="boldText text-white opacity-90 mt-8 mb-2 sm:px-16 lg:px-48">Tamamen <span
-                    class="gradientColor"><b>Senin Sunucun</b></span> İçin Tasarlandı.</p>
-            <p class="regularTextIta text-white opacity-60 mb-8 sm:px-16 lg:px-48">FunBot, Sunucunuzdaki Eğlenceyi Artırmak, Moderasyonu Kolaylaştırmak, Bot List, Abone Sistemi, Kayıt Sistemi, NSFW Vardır Kullanmak İçin Beni Davet Et Kullanımı Kolaydır</p>
-            <br>
+                    class="gradientColor"><b>Kolay Kullanım</b></span> İçin Tasarlandı.</p>
+            <p class="regularTextIta text-white opacity-60 mb-8 sm:px-16 lg:px-48">FunDevs, Uygulama Yapan Bir Ekiptir Hızlı, Kolay Kullanım Ve Güvenli Bir Şekilde Kullanabilirsiniz
             <hr class="customHr">
         </div>
     </section>
@@ -124,26 +119,22 @@
         <div class="py-8 px-4 mx-auto max-w-6xl lg:py-16">
             <p class="extraBoldText text-white opacity-90 mt-8 mb-2 sm:px-16 lg:px-48"><span
                     class="gradientColor"><b>Kurulumsuz </b></span>Kullanması Son Derece Basit</p>
-            <p class="smallText text-white opacity-80 mb-8 sm:px-16 lg:px-48">Kurulum Gerekmez!</p>
+            <p class="smallText text-white opacity-80 mb-8 sm:px-16 lg:px-48">Türkçe!</p>
             <br>
             <div class="sm:px-16 lg:px-48">
                 <div class="grid grid-cols-1 gap-8 sm:gird-cols-1 md:grid-cols-3">
                     <div class="card h-full">
                         <div class="items-center overflow-hidden">
                             <p class="smallText text-white opacity-80 mt-5">Adım 1</p>
-                            <p class="boldText text-white opacity-90 mt-3"><span class="gradientColor"><b>Sunucuna
-                                        Ekle</b></span></p>
-                            <p class="smallText text-white opacity-80 mt-3">FunBot'u Sunucuna Ekle.</p>
+                            <p class="boldText text-white opacity-90 mt-3"><span class="gradientColor"><b>FunApps Sitesine Git</b></span></p>
+                            <p class="smallText text-white opacity-80 mt-3">FunDevs'in Uygulamalarını Göreceksin.</p>
                         </div>
                     </div>
                     <div class="card h-full">
                         <div class="items-center overflow-hidden">
                             <p class="smallText text-white opacity-80 mt-5">Adım 2</p>
-                            <p class="boldText text-white opacity-90 mt-3"><span class="gradientColor"><b>Komutu
-                                        kullan</b></span></p>
-                            <p class="smallText text-white opacity-80 mt-3">F!Komutlar Yaz Ve 
-                                Komutları
-                                Görüntüle.</p>
+                            <p class="boldText text-white opacity-90 mt-3"><span class="gradientColor"><b>Seçtiğin Uygulamaya İndir</b></span></p>
+                            <p class="smallText text-white opacity-80 mt-3">İstediğin Uygulamayı İndir.</p>
                         </div>
                     </div>
                     <div class="card h-full">
@@ -151,17 +142,16 @@
                             <p class="smallText text-white opacity-80 mt-5">Adım 3</p>
                             <p class="boldText text-white opacity-90 mt-3"><span class="gradientColor"><b>Her Şey
                                         Hazır!</b></span></p>
-                            <p class="smallText text-white opacity-80 mt-3">İşte Hazır! Artık Botu
-                                Kullanabilirsin</p>
+                            <p class="smallText text-white opacity-80 mt-3">İşte Hazır! Artık İndirilen Dosyayı Kurup Uygulamayı Keşfedebilirsin</p>
                         </div>
                     </div>
                 </div>
             </div>
             <br><br>
             <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4 mt-8">
-                <a href="https://funbot-1.gitbook.io/funbot-wiki" target="_blank"
+                <a href="https://funapps-ggtektf.gamma.site/" target="_blank"
                     class="normalTextBold text-black gradientBg inline-flex justify-center items-center py-3 px-6 text-center rounded-full">
-                    Wiki (Bot Hakkında Daha Fazla Bilgi)
+                    FunApps
                     <svg aria-hidden="true" class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
                         xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd"
@@ -175,7 +165,7 @@
                         class="fa-regular fa-check mr-1 opacity-90"></i> <span class="opacity-60">Kullanması
                         Kolay</span></span> <span class="mr-2"><i
                         class="fa-regular fa-check mr-1 opacity-90"></i>
-                    <span class="opacity-60">7/24 Aktif</span></span></p>
+                    <span class="opacity-60">Hızlı</span></span></p>
         </div>
     </section>
 
@@ -389,7 +379,7 @@
             <p class="smallText text-white opacity-90 mt-8 mb-8 sm:px-16 lg:px-48"><span class="mr-2"><i
                         class="fa-regular fa-check mr-1 opacity-90"></i> <span class="opacity-60">Kullanılması Basit</span></span> <span class="mr-2"><i
                         class="fa-regular fa-check mr-1 opacity-90"></i>
-                    <span class="opacity-60">7/24</span></span></p>
+                    <span class="opacity-60">Güvenli</span></span></p>
         </div>
     </section>
 
@@ -475,7 +465,7 @@
                                 class="fa-regular fa-check mr-1 opacity-90"></i> <span class="opacity-60">Kullanması 
                                 Kolay</span></span> <span class="mr-2"><i
                                 class="fa-regular fa-check mr-1 opacity-90"></i>
-                            <span class="opacity-60">7/24 Aktif</span></span></p>
+                            <span class="opacity-60">Hızlı</span></span></p>
                 </div>
             </div>
             <br>
